argocd/resources/forgejo-ingress/forgejo-ssh-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: forgejo-ssh-tailscale
  namespace: forgejo
  annotations:
    # Expose SSH via Tailscale
    tailscale.com/expose: "true"
    tailscale.com/hostname: "forgejo-ssh"
    tailscale.com/tags: "tag:k8s"
spec:
  type: LoadBalancer
  loadBalancerClass: tailscale
  ports:
    - name: ssh
      port: 22
      targetPort: 2222
      protocol: TCP
  selector:
    app.kubernetes.io/name: forgejo
