argocd/resources/forgejo-ingress/forgejo-tailscale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: forgejo-tailscale
  namespace: forgejo
spec:
  ingressClassName: tailscale
  rules:
    - host: forgejo
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: forgejo-http
                port:
                  number: 3000
